crates/sentinel-driver/tests/snapshots/ui__c34_kont_used_as_value.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c34_kont_used_as_value.sentinel\")"
---
sentinel::types::kont_used_as_value

  × continuation binding can only be called, not used as a value
    ╭─[tests/ui/c34_kont_used_as_value.sentinel:12:26]
 11 │         Io.read(k) => {
 12 │             let f: i64 = k;
    ·                          ┬
    ·                          ╰── 
 13 │             42
    ╰────
