crates/sentinel-driver/tests/snapshots/ui__c35_effecting_let_nullable.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c35_effecting_let_nullable.sentinel\")"
---
sentinel::codegen::effecting_fn_body_not_direct

  × effecting fn `caller` cannot be lowered: a `let` bound to a suspension
  │ must be `i64` or `secret i64`; `?i64` does not fit the continuation's
  │ single i64 slot
  help: an effecting fn returns a continuation, so only the shapes ADR 0072
        enumerates can be lowered; reshape the body, or wait for the wider
        seam that ADR 0072 defers
